Fix mobile dropdown layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,10 @@ ul {
   margin-block-end: 0;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 button {
   background: none;
   border: none;
@@ -235,7 +239,8 @@ body::before {
 }
 
 .mobile-dropdown {
-  position: relative;
+  position: fixed;
+  width: 100vw;
   height: 100vh;
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(20px);
@@ -246,6 +251,7 @@ body::before {
   padding: 24px;
   gap: 24px;
   margin-top: -124px;
+  box-sizing: border-box;
 }
 
 .mobile-dropdown-menu-item {
